<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BWatchers__fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".loginActivity">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgLogo"
        android:layout_width="213dp"
        android:layout_height="189dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/amistad"
        app:civ_border_color="#EEE"
        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#FFF"
        app:civ_shadow_radius="0" />

    <LinearLayout
        style="@style/LayoutMarginBWatchers"
        android:layout_width="382dp"
        android:layout_height="315dp"
        android:layout_marginTop="340dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/background_light">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etxName"
                style="@style/Layout_Match_Match_BWatchers"
                android:backgroundTint="@android:color/background_light"

                android:drawableLeft="@drawable/profesor"
                android:hint="@string/usuario"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/background_light">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etxPassword"
                style="@style/Layout_Match_Match_BWatchers"
                android:backgroundTint="@android:color/background_light"
                android:drawableLeft="@drawable/bloqueado"
                android:hint="@string/contraseña"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/TextBWatchersInputButton"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:background="@android:color/background_light"
        android:text="@string/iniciar"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/Layout_Match_Match_BWatchers"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:text="@string/registrar"
        android:textColor="@android:color/background_light" />


</RelativeLayout>